Finished 3d object functionality

--- a/src/components/style.module.css
+++ b/src/components/style.module.css
@@ -5,6 +5,19 @@
     display: block;
 }
 
+.threeDContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+.threeDViewport {
+    border: 1px solid black;
+    margin-bottom: 10px;
+    border-radius: 24px;
+}
+
 .mainWrapper {
     display: flex;
     flex-direction: row;
