--- a/src/components/style.module.css
+++ b/src/components/style.module.css
@@ -18,6 +18,20 @@
     border-radius: 24px;
 }
 
+.polygonContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding: 20px;
+}
+
+.polygonViewport {
+    border: 1px solid black;
+    margin-bottom: 10px;
+    border-radius: 24px;
+}
+
 .mainWrapper {
     display: flex;
     flex-direction: row;
