--- a/src/components/style.module.css
+++ b/src/components/style.module.css
@@ -32,6 +32,21 @@
     border-radius: 24px;
 }
 
+.triangulationWrapper {
+    width: 100%;
+    height: calc(100vh - 100px);
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+}
+
+.triangulationWrapper svg {
+    border: 1px solid black;
+    border-radius: 24px;
+}
+
 .mainWrapper {
     display: flex;
     flex-direction: row;
